--- a/map_application/pubspec.yaml
+++ b/map_application/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   google_maps_flutter:
+  dio: 
+  http: 
 
 dev_dependencies:
   flutter_test:
